# etl-cbi

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  ruff.toml  table_getting.py
.github/workflows/: ci.yml
src/: get_karat_db.py  grouping.py  table_cleaning.py  table_getting.py  tables_joining.py
src/tests/: test_get_karat_db.py
