[tool.poetry]
name = "etl-cbi"
version = "0.1.0"
description = "ETL system for CBI application"
authors = ["Evgeny Neginsky <cop252@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
datetime = "^5.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
