[tool.poetry]
name = "etl-cbi"
version = "0.1.0"
description = "ETL system for CBI application"
authors = ["Evgeny Neginsky <cop252@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
